Sync with apaches version of JSTL which is much better maintained then java.net one.