@@ -1,54 +1,13 @@
 /*
- * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
- *
- * Copyright (c) 1997-2010 Oracle and/or its affiliates. All rights reserved.
- *
- * The contents of this file are subject to the terms of either the GNU
- * General Public License Version 2 only ("GPL") or the Common Development
- * and Distribution License("CDDL") (collectively, the "License").  You
- * may not use this file except in compliance with the License.  You can
- * obtain a copy of the License at
- * https://glassfish.dev.java.net/public/CDDL+GPL_1_1.html
- * or packager/legal/LICENSE.txt.  See the License for the specific
- * language governing permissions and limitations under the License.
- *
- * When distributing the software, include this License Header Notice in each
- * file and include the License file at packager/legal/LICENSE.txt.
- *
- * GPL Classpath Exception:
- * Oracle designates this particular file as subject to the "Classpath"
- * exception as provided by Oracle in the GPL Version 2 section of the License
- * file that accompanied this code.
- *
- * Modifications:
- * If applicable, add the following below the License Header, with the fields
- * enclosed by brackets [] replaced by your own identifying information:
- * "Portions Copyright [year] [name of copyright owner]"
- *
- * Contributor(s):
- * If you wish your version of this file to be governed by only the CDDL or
- * only the GPL Version 2, indicate your decision by adding "[Contributor]
- * elects to include this software in this distribution under the [CDDL or GPL
- * Version 2] license."  If you don't indicate a single choice of license, a
- * recipient has the option to distribute your version of this file under
- * either the CDDL, the GPL Version 2 or to extend the choice of license to
- * its licensees as provided above.  However, if you add GPL Version 2 code
- * and therefore, elected the GPL Version 2 license, then the option applies
- * only if the new code is made subject to such option by the copyright
- * holder.
- *
- *
- * This file incorporates work covered by the following copyright and
- * permission notice:
- *
- * Copyright 2004 The Apache Software Foundation
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
+ * 
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ * 
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -58,16 +17,9 @@
 
 package javax.servlet.jsp.jstl.core;
 
-import java.util.List;
-import java.util.Collection;
-import java.util.Enumeration;
-import java.util.Map;
-import java.util.Iterator;
-
+import javax.el.ELContext;
 import javax.el.ValueExpression;
 import javax.el.VariableMapper;
-import javax.el.ELException;
-
 import javax.servlet.jsp.JspException;
 import javax.servlet.jsp.JspTagException;
 import javax.servlet.jsp.PageContext;
@@ -77,31 +29,27 @@ import javax.servlet.jsp.tagext.TryCatchFinally;
 
 /**
  * <p>Base support class to facilitate implementation of iteration tags.</p>
- *
  * <p>Since most iteration tags will behave identically with respect to
  * actual iterative behavior, JSTL provides this
  * base support class to facilitate implementation.  Many iteration tags
- * will extend this and merely implement the <tt>hasNext()</tt> and 
+ * will extend this and merely implement the <tt>hasNext()</tt> and
  * <tt>next()</tt> methods
  * to provide contents for the handler to iterate over.</p>
- *
  * <p>In particular, this base class provides support for:</p>
- * 
  * <ul>
- *  <li> Iteration control, based on protected <tt>prepare()</tt>, <tt>next()</tt>,
- *       and <tt>hasNext()</tt> methods
- *  <li> Subsetting (<tt>begin</tt>, <tt>end</tt>, <tt>step></tt>functionality, 
- *       including validation
- *       of subset parameters for sensibility)
- *  <li> item retrieval (<tt>getCurrent()</tt>)
- *  <li> status retrieval (<tt>LoopTagStatus</tt>)
- *  <li> exposing attributes (set by <tt>var</tt> and <tt>varStatus</tt> attributes)
+ * <li> Iteration control, based on protected <tt>prepare()</tt>, <tt>next()</tt>,
+ * and <tt>hasNext()</tt> methods
+ * <li> Subsetting (<tt>begin</tt>, <tt>end</tt>, <tt>step></tt>functionality,
+ * including validation
+ * of subset parameters for sensibility)
+ * <li> item retrieval (<tt>getCurrent()</tt>)
+ * <li> status retrieval (<tt>LoopTagStatus</tt>)
+ * <li> exposing attributes (set by <tt>var</tt> and <tt>varStatus</tt> attributes)
  * </ul>
- *
  * <p>In providing support for these tasks, <tt>LoopTagSupport</tt> contains
  * certain control variables that act to modify the iteration.  Accessors
  * are provided for these control variables when the variables represent
- * information needed or wanted at translation time (e.g., <tt>var</tt>, 
+ * information needed or wanted at translation time (e.g., <tt>var</tt>,
  * <tt>varStatus</tt>).  For
  * other variables, accessors cannot be provided here since subclasses
  * may differ on their implementations of how those accessors are received.
@@ -114,9 +62,8 @@ import javax.servlet.jsp.tagext.TryCatchFinally;
  */
 
 public abstract class LoopTagSupport
-    extends TagSupport
-    implements LoopTag, IterationTag, TryCatchFinally
-{
+        extends TagSupport
+        implements LoopTag, IterationTag, TryCatchFinally {
     //*********************************************************************
     // 'Protected' state 
 
@@ -130,7 +77,9 @@ public abstract class LoopTagSupport
      * is in the doStartTag() method of an EL-aware subclass.)
      */
 
-    /** Starting index ('begin' attribute) */
+    /**
+     * Starting index ('begin' attribute)
+     */
     protected int begin;
 
     /**
@@ -141,28 +90,32 @@ public abstract class LoopTagSupport
      */
     protected int end;
 
-    /** Iteration step ('step' attribute) */
+    /**
+     * Iteration step ('step' attribute)
+     */
     protected int step;
 
-    /** Boolean flag indicating whether 'begin' was specified. */
+    /**
+     * Boolean flag indicating whether 'begin' was specified.
+     */
     protected boolean beginSpecified;
 
-    /** Boolean flag indicating whether 'end' was specified. */
+    /**
+     * Boolean flag indicating whether 'end' was specified.
+     */
     protected boolean endSpecified;
 
-    /** Boolean flag indicating whether 'step' was specified. */
+    /**
+     * Boolean flag indicating whether 'step' was specified.
+     */
     protected boolean stepSpecified;
 
-    /** Attribute-exposing control */
+    /**
+     * Attribute-exposing control
+     */
     protected String itemId, statusId;
 
-    /** The deferred expression if any */
     protected ValueExpression deferredExpression;
-
-    /** A temporary used to hold the previous value (from the enclosing
-        iteration tag) for the EL variable.  */
-    private ValueExpression oldMappedValue;
-
 
     //*********************************************************************
     // 'Private' state (implementation details)
@@ -190,9 +143,6 @@ public abstract class LoopTagSupport
     private int index;                          // the current internal index
     private int count;                          // the iteration count
     private boolean last;                       // current round == last one?
-    private IteratedExpression iteratedExpression;
-                // holds an instance shared by all ValueExpression created
-                // for variableMapper, for iterators.
 
     //*********************************************************************
     // Constructor
@@ -216,7 +166,6 @@ public abstract class LoopTagSupport
      * <p>Returns the next object over which the tag should iterate.  This
      * method must be provided by concrete subclasses of LoopTagSupport
      * to inform the base logic about what objects it should iterate over.</p>
-     *
      * <p>It is expected that this method will generally be backed by an
      * Iterator, but this will not always be the case.  In particular, if
      * retrieving the next object raises the possibility of an exception
@@ -224,12 +173,12 @@ public abstract class LoopTagSupport
      * to the JSP container as a JspTagException; a standalone Iterator
      * would not be able to do this.  (This explains why LoopTagSupport
      * does not simply call for an Iterator from its subtags.)</p>
-     * 
+     *
      * @return the java.lang.Object to use in the next round of iteration
-     * @exception java.util.NoSuchElementException
-     *            if next() is called but no new elements are available
-     * @exception javax.servlet.jsp.JspTagException
-     *            for other, unexpected exceptions
+     * @throws java.util.NoSuchElementException
+     *          if next() is called but no new elements are available
+     * @throws javax.servlet.jsp.JspTagException
+     *          for other, unexpected exceptions
      */
     protected abstract Object next() throws JspTagException;
 
@@ -238,24 +187,25 @@ public abstract class LoopTagSupport
      * over which to iterate.  This method must be provided by concrete
      * subclasses of LoopTagSupport to assist the iterative logic
      * provided by the supporting base class.</p>
-     *  
      * <p>See <a href="#next()">next</a> for more information about the
      * purpose and expectations behind this tag.</p>
      *
      * @return <tt>true</tt> if there is at least one more item to iterate
      *         over, <tt>false</tt> otherwise
-     * @exception javax.servlet.jsp.JspTagException
+     * @throws javax.servlet.jsp.JspTagException
+     *
      * @see #next
      */
     protected abstract boolean hasNext() throws JspTagException;
 
     /**
      * <p>Prepares for a single tag invocation.  Specifically, allows
-     * subclasses to prepare for calls to hasNext() and next(). 
+     * subclasses to prepare for calls to hasNext() and next().
      * Subclasses can assume that prepare() will be called once for
      * each invocation of doStartTag() in the superclass.</p>
      *
-     * @exception javax.servlet.jsp.JspTagException
+     * @throws javax.servlet.jsp.JspTagException
+     *
      */
     protected abstract void prepare() throws JspTagException;
 
@@ -266,6 +216,7 @@ public abstract class LoopTagSupport
     /**
      * Releases any resources this LoopTagSupport may have (or inherit).
      */
+    @Override
     public void release() {
         super.release();
         init();
@@ -274,6 +225,7 @@ public abstract class LoopTagSupport
     /**
      * Begins iterating by processing the first item.
      */
+    @Override
     public int doStartTag() throws JspException {
         if (end != -1 && begin > end) {
             // JSTL 1.1. We simply do not execute the loop.
@@ -284,8 +236,6 @@ public abstract class LoopTagSupport
         index = 0;
         count = 1;
         last = false;
-        iteratedExpression = null;
-        deferredExpression = null;
 
         // let the subclass conduct any necessary preparation
         prepare();
@@ -295,10 +245,12 @@ public abstract class LoopTagSupport
 
         // get the item we're interested in
         if (hasNext())
-            // index is 0-based, so we don't update it for the first item
+        // index is 0-based, so we don't update it for the first item
+        {
             item = next();
-        else
+        } else {
             return SKIP_BODY;
+        }
 
         /*
          * now discard anything we have to "step" over.
@@ -307,7 +259,7 @@ public abstract class LoopTagSupport
         discard(step - 1);
 
         // prepare to include our body...
-        exposeVariables(true);
+        exposeVariables();
         calibrateLast();
         return EVAL_BODY_INCLUDE;
     }
@@ -316,6 +268,7 @@ public abstract class LoopTagSupport
      * Continues the iteration when appropriate -- that is, if we (a) have
      * more items and (b) don't run over our 'end' (given our 'step').
      */
+    @Override
     public int doAfterBody() throws JspException {
 
         // re-sync the index, given our prior behind-the-scenes 'step'
@@ -328,8 +281,9 @@ public abstract class LoopTagSupport
         if (hasNext() && !atEnd()) {
             index++;
             item = next();
-        } else
+        } else {
             return SKIP_BODY;
+        }
 
         /*
          * now discard anything we have to "step" over.
@@ -338,31 +292,30 @@ public abstract class LoopTagSupport
         discard(step - 1);
 
         // prepare to re-iterate...
-        exposeVariables(false);
+        exposeVariables();
         calibrateLast();
         return EVAL_BODY_AGAIN;
     }
 
     /**
      * Removes any attributes that this LoopTagSupport set.
-     *
      * <p> These attributes are intended to support scripting variables with
      * NESTED scope, so we don't want to pollute attribute space by leaving
      * them lying around.
      */
     public void doFinally() {
-	/*
-	 * Make sure to un-expose variables, restoring them to their
-	 * prior values, if applicable.
-         */
-	unExposeVariables();
+        /*
+    * Make sure to un-expose variables, restoring them to their
+    * prior values, if applicable.
+        */
+        unExposeVariables();
     }
 
     /**
      * Rethrows the given Throwable.
      */
     public void doCatch(Throwable t) throws Throwable {
-	throw t;
+        throw t;
     }
 
     //*********************************************************************
@@ -381,6 +334,7 @@ public abstract class LoopTagSupport
      * Subclasses can override this if necessary, but such a need is
      * expected to be rare.)
      */
+
     public Object getCurrent() {
         return item;
     }
@@ -392,6 +346,7 @@ public abstract class LoopTagSupport
      * implementation of subclasses that are happy with reasonable default
      * behavior.)
      */
+
     public LoopTagStatus getLoopStatus() {
 
         // local implementation with reasonable default behavior
@@ -412,35 +367,45 @@ public abstract class LoopTagSupport
                  */
                 return (LoopTagSupport.this.getCurrent());
             }
+
             public int getIndex() {
                 return (index + begin);       // our 'index' isn't getIndex()
             }
+
             public int getCount() {
                 return (count);
             }
+
             public boolean isFirst() {
                 return (index == 0);          // our 'index' isn't getIndex()
             }
+
             public boolean isLast() {
                 return (last);                // use cached value
             }
+
             public Integer getBegin() {
-                if (beginSpecified)
-                    return Integer.valueOf(begin);
-                else
+                if (beginSpecified) {
+                    return (new Integer(begin));
+                } else {
                     return null;
+                }
             }
+
             public Integer getEnd() {
-                if (endSpecified)
-                    return Integer.valueOf(end);
-                else
+                if (endSpecified) {
+                    return (new Integer(end));
+                } else {
                     return null;
+                }
             }
+
             public Integer getStep() {
-                if (stepSpecified)
-                    return Integer.valueOf(step);
-                else
+                if (stepSpecified) {
+                    return (new Integer(step));
+                } else {
                     return null;
+                }
             }
         }
 
@@ -449,18 +414,11 @@ public abstract class LoopTagSupport
          * implementation, we just need one per instance, but I'd rather
          * not keep the reference around once release() has been called.
          */
-        if (status == null)
+        if (status == null) {
             status = new Status();
+        }
 
         return status;
-    }
-
-    /*
-     * Get the delimiter for string tokens.  Used only for constructing
-     * the deferred expression for it.
-     */
-    protected String getDelims() {
-        return ",";
     }
 
     /*
@@ -478,7 +436,7 @@ public abstract class LoopTagSupport
      * Sets the 'var' attribute.
      *
      * @param id Name of the exported scoped variable storing the current item
-     * of the iteration.
+     *           of the iteration.
      */
     public void setVar(String id) {
         this.itemId = id;
@@ -488,7 +446,7 @@ public abstract class LoopTagSupport
      * Sets the 'varStatus' attribute.
      *
      * @param statusId Name of the exported scoped variable storing the status
-     * of the iteration.
+     *                 of the iteration.
      */
     public void setVarStatus(String statusId) {
         this.statusId = statusId;
@@ -509,8 +467,9 @@ public abstract class LoopTagSupport
      * expected to propagate up if it isn't
      */
     protected void validateBegin() throws JspTagException {
-        if (begin < 0)
+        if (begin < 0) {
             throw new JspTagException("'begin' < 0");
+        }
     }
 
     /**
@@ -518,8 +477,9 @@ public abstract class LoopTagSupport
      * expected to propagate up if it isn't
      */
     protected void validateEnd() throws JspTagException {
-        if (end < 0)
+        if (end < 0) {
             throw new JspTagException("'end' < 0");
+        }
     }
 
     /**
@@ -527,15 +487,18 @@ public abstract class LoopTagSupport
      * expected to propagate up if it isn't
      */
     protected void validateStep() throws JspTagException {
-        if (step < 1)
+        if (step < 1) {
             throw new JspTagException("'step' <= 0");
+        }
     }
 
 
     //*********************************************************************
     // Private utility methods
 
-    /** (Re)initializes state (during release() or construction) */
+    /**
+     * (Re)initializes state (during release() or construction)
+     */
     private void init() {
         // defaults for internal bookkeeping
         index = 0;              // internal index always starts at 0
@@ -546,6 +509,7 @@ public abstract class LoopTagSupport
         beginSpecified = false; // not specified until it's specified :-)
         endSpecified = false;   // (as above)
         stepSpecified = false;  // (as above)
+        deferredExpression = null;
 
         // defaults for interface with page author
         begin = 0;              // when not specified, 'begin' is 0 by spec.
@@ -555,14 +519,16 @@ public abstract class LoopTagSupport
         statusId = null;        // when not specified, no variable exported
     }
 
-    /** Sets 'last' appropriately. */
+    /**
+     * Sets 'last' appropriately.
+     */
     private void calibrateLast() throws JspTagException {
         /*
          * the current round is the last one if (a) there are no remaining
          * elements, or (b) the next one is beyond the 'end'.
          */
         last = !hasNext() || atEnd() ||
-            (end != -1 && (begin + index + step > end));
+                (end != -1 && (begin + index + step > end));
     }
 
     /**
@@ -570,45 +536,43 @@ public abstract class LoopTagSupport
      * if appropriate.  Note that we don't really care, here, whether they're
      * scripting variables or not.
      */
-    private void exposeVariables(boolean firstTime) throws JspTagException {
+    private void exposeVariables() throws JspTagException {
 
-        /*
-         * We need to support null items returned from next(); we
-         * do this simply by passing such non-items through to the
-         * scoped variable as effectively 'null' (that is, by calling
-         * removeAttribute()).
-         *
-         * Also, just to be defensive, we handle the case of a null
-         * 'status' object as well.
-         *
-         * We call getCurrent() and getLoopStatus() (instead of just using
-         * 'item' and 'status') to bridge to subclasses correctly.
-         * A subclass can override getCurrent() or getLoopStatus() but still
-         * depend on our doStartTag() and doAfterBody(), which call this
-         * method (exposeVariables()), to expose 'item' and 'status'
-         * correctly.
-         */
-
-        if (itemId != null) {
-            if (getCurrent() == null)
-                pageContext.removeAttribute(itemId, PageContext.PAGE_SCOPE);
-            else if (deferredExpression != null) {
-                VariableMapper vm = 
-                    pageContext.getELContext().getVariableMapper();
-                if (vm != null) {
-                    ValueExpression ve = getVarExpression(deferredExpression);
-                    ValueExpression tmpValue = vm.setVariable(itemId, ve);
-                    if (firstTime)
-                        oldMappedValue = tmpValue;
+        if (deferredExpression == null) {
+            /*
+             * We need to support null items returned from next(); we
+             * do this simply by passing such non-items through to the
+             * scoped variable as effectively 'null' (that is, by calling
+             * removeAttribute()).
+             *
+             * Also, just to be defensive, we handle the case of a null
+             * 'status' object as well.
+             *
+             * We call getCurrent() and getLoopStatus() (instead of just using
+             * 'item' and 'status') to bridge to subclasses correctly.
+             * A subclass can override getCurrent() or getLoopStatus() but still
+             * depend on our doStartTag() and doAfterBody(), which call this
+             * method (exposeVariables()), to expose 'item' and 'status'
+             * correctly.
+             */
+            if (itemId != null) {
+                if (getCurrent() == null) {
+                    pageContext.removeAttribute(itemId, PageContext.PAGE_SCOPE);
+                } else {
+                    pageContext.setAttribute(itemId, getCurrent());
                 }
-            } else
-                pageContext.setAttribute(itemId, getCurrent());
+            }
+        } else { //this is using a DeferredExpression
+            ELContext myELContext = pageContext.getELContext();
+            VariableMapper vm = myELContext.getVariableMapper();
+            vm.setVariable(itemId, (ValueExpression) getCurrent());
         }
         if (statusId != null) {
-            if (getLoopStatus() == null)
+            if (getLoopStatus() == null) {
                 pageContext.removeAttribute(statusId, PageContext.PAGE_SCOPE);
-            else
+            } else {
                 pageContext.setAttribute(statusId, getLoopStatus());
+            }
         }
 
     }
@@ -618,15 +582,20 @@ public abstract class LoopTagSupport
      * restores them to their prior values (and scopes).
      */
     private void unExposeVariables() {
-        // "nested" variables are now simply removed
-	if (itemId != null) {
-            pageContext.removeAttribute(itemId, PageContext.PAGE_SCOPE);
-            VariableMapper vm = pageContext.getELContext().getVariableMapper();
-            if (vm != null)
-                vm.setVariable(itemId, oldMappedValue);
+        if (deferredExpression == null) {
+            // "nested" variables are now simply removed
+            if (itemId != null) {
+                pageContext.removeAttribute(itemId, PageContext.PAGE_SCOPE);
+            }
+        } else {
+            //we're deferred ... remove variable mapping
+            ELContext myELContext = pageContext.getELContext();
+            VariableMapper vm = myELContext.getVariableMapper();
+            vm.setVariable(itemId, null);
         }
-	if (statusId != null)
-	    pageContext.removeAttribute(statusId, PageContext.PAGE_SCOPE);
+        if (statusId != null) {
+            pageContext.removeAttribute(statusId, PageContext.PAGE_SCOPE);
+        }
     }
 
     /**
@@ -661,8 +630,9 @@ public abstract class LoopTagSupport
      * don't want factor in the 'begin' value already.
      */
     private void discardIgnoreSubset(int n) throws JspTagException {
-	while (n-- > 0 && hasNext())
-	    next();
+        while (n-- > 0 && hasNext()) {
+            next();
+        }
     }
 
     /**
@@ -675,27 +645,11 @@ public abstract class LoopTagSupport
         return ((end != -1) && (begin + index >= end));
     }
 
-    private ValueExpression getVarExpression(ValueExpression expr) {
-        Object o = expr.getValue(pageContext.getELContext());
-        if (o == null)
-            return null;
-
-        if (o.getClass().isArray() || o instanceof List) {
-            return new IndexedValueExpression(deferredExpression, index+begin);
-        }
-
-        if (o instanceof Collection || o instanceof Iterator ||
-            o instanceof Enumeration || o instanceof Map ||
-            o instanceof String) {
-
-            if (iteratedExpression == null) {
-                iteratedExpression =
-                    new IteratedExpression(deferredExpression, getDelims());
-            }
-            return new IteratedValueExpression(iteratedExpression, index+begin);
-        }
-
-        throw new ELException("Don't know how to iterate over supplied "
-                              + "items in forEach");
+    /**
+     * Get the delimiter for string tokens. Used only for constructing
+     * the deferred expression for it.
+     */
+    protected String getDelims() {
+        return ",";
     }
 }
